--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@
 <div id="wrap">
 
 <div id="header">
-<h1>portfolio </h1>
-<h2> Emba portfolio </h2>
+<h1>PROG 109 </h1>
+<h2>portfolio </h2>
 </div>
 
 <div id="topmenu">
@@ -67,6 +67,7 @@ height="31" width="88" /></a>&nbsp;
 <div class="right"> 
 <!-- Please consider leaving the credit - link back to our website in the footer intact or if you want to remove it please buy link back free license on http://www.simpletemplates.org/simple-website-template-1.html
 -->
+Design by <a href="http://weyjones.github.io">Template</a><br/>
 <p id="time"></p>
 </div>
 
