--- a/artifact.html
+++ b/artifact.html
@@ -13,8 +13,8 @@
 <div id="wrap">
 
 <div id="header">
-<h1>PROG 109 </h1>
-<h2>Weizong portfolio spring</h2>
+<h1>portfolio </h1>
+<h2>Emba portfolio </h2>
 </div>
 
 <div id="topmenu">
