--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
 <meta name="keywords" content="simple #1, template, simpletemplates.org" />
 <link rel="stylesheet" media="screen" href="http://openfontlibrary.org/face/free-grotesque-web-font" type="text/css"/>
 <link rel="stylesheet" type="text/css" href="style.css" />
-<script src="portfolio.js" type="text/javascript"  defer="defer"></script>
 <title> portfolio</title>
 </head>
 <body>
 <div id="wrap">
 
 <div id="header">
-<h1>PROG 109 </h1>
-<h2> portfolio </h2>
+<h1>PortfolioDesign</h1>
+<h2> my website</h2>
 </div>
 
 <div id="topmenu">
@@ -45,7 +44,7 @@
 <div id="footer">
 
 <div class="left">
-Copyright &copy; 2015 by <a href="#">Weizong</a>
+Copyright &copy; 2021 by <a href="#">Emba</a>
 <!-- W3C Markup Validator -->
 <p><a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" 
 
@@ -64,8 +63,6 @@ height="31" width="88" /></a>&nbsp;
 <div class="right"> 
 <!-- Please consider leaving the credit - link back to our website in the footer intact or if you want to remove it please buy link back free license on http://www.simpletemplates.org/simple-website-template-1.html
 -->
-Design by <a href="http://weyjones.github.io">Template</a>
-<p id="time"></p>
 </div>
 
 
