--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@
 <div id="wrap">
 
 <div id="header">
-<h1>PROG 109 </h1>
-<h2>portfolio </h2>
+<h1>Portfolio Design</h1>
+<h2>My Website </h2>
 </div>
 
 <div id="topmenu">
@@ -37,7 +37,6 @@
 <h2>About Me</h2>
   <p> Hello, my name is Emba, and I am a 17-year-old running start student who attends Redmond High School part-time. I also participate in an indoor soccer league in Redmond. Soccer is my all-time favorite sport. My objectives for this year are to complete my high school requirements and, hopefully, to begin work on my major computer science.</p>
 
-
 </div>
 
 </div>
@@ -48,7 +47,7 @@
 <div id="footer">
 
 <div class="left">
-Copyright &copy; 2015 by <a href="#"> Emba</a>
+Copyright &copy; 2021 by <a href="#"> Emba</a>
 <!-- W3C Markup Validator -->
 <p><a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" 
 
@@ -67,7 +66,7 @@ height="31" width="88" /></a>&nbsp;
 <div class="right"> 
 <!-- Please consider leaving the credit - link back to our website in the footer intact or if you want to remove it please buy link back free license on http://www.simpletemplates.org/simple-website-template-1.html
 -->
-Design by <a href="http://weyjones.github.io">Template</a><br/>
+Design by <a href="">Template</a><br/>
 <p id="time"></p>
 </div>
 
