--- a/artifact.html
+++ b/artifact.html
@@ -6,15 +6,14 @@
 <meta name="keywords" content="simple #1, template, simpletemplates.org" />
 <link rel="stylesheet" media="screen" href="http://openfontlibrary.org/face/free-grotesque-web-font" type="text/css"/>
 <link rel="stylesheet" type="text/css" href="style.css" />
-<script src="portfolio.js" type="text/javascript" defer="defer"></script>
 <title>Artifact</title>
 </head>
 <body>
 <div id="wrap">
 
 <div id="header">
-<h1>portfolio </h1>
-<h2>Emba portfolio </h2>
+<h1>PortfolioDesign </h1>
+<h2>My website</h2>
 </div>
 
 <div id="topmenu">
@@ -34,14 +33,12 @@
 
 <h4>Artifact 1: Resume</h4>
 <a href="https://simba000.github.io/Resmue/" target="_blank">
-<img src="https://img.icons8.com/external-itim2101-lineal-color-itim2101/344/external-resume-human-resources-itim2101-lineal-color-itim2101.png" alt="resume link" width="100" height="100">
+<img src="https://d338t8kmirgyke.cloudfront.net/icons/icon_pngs/000/002/277/original/resume.png" alt="resume link" width="100" height="100">
 </a>
   
-<p>A sample resume using only HTML tags. No CSS included</p>
-
 <h4>Artifact 2: Chessboard</h4>
 <a href="https://emba17.github.io/chessbored/" target="_blank">
-<img src="https://img.icons8.com/external-vitaliy-gorbachev-fill-vitaly-gorbachev/2x/external-chess-business-vitaliy-gorbachev-fill-vitaly-gorbachev.png" alt="chessboard link" width="100" height="100">
+<img src="https://www.pinclipart.com/picdir/big/497-4972566_red-oval-png-king-chess-piece-red-clipart.png" alt="chessboard link" width="100" height="100">
 </a>
 <p>A chessboard with pieces using HTML tags and styled with an external CSS file.</p>
     
