--- a/artifact.html
+++ b/artifact.html
@@ -40,7 +40,21 @@
 <a href="https://emba17.github.io/chessbored/" target="_blank">
 <img src="https://www.pinclipart.com/picdir/big/497-4972566_red-oval-png-king-chess-piece-red-clipart.png" alt="chessboard link" width="100" height="100">
 </a>
-<p>A chessboard with pieces using HTML tags and styled with an external CSS file.</p>
-    
-    </body>
+<div class="right"> 
+<!-- Please consider leaving the credit - link back to our website in the footer intact or if you want to remove it please buy link back free license on http://www.simpletemplates.org/simple-website-template-1.html
+-->
+Design by <a href="">Template</a><br/>
+<p id="time"></p>
+</div>
+
+
+<div class="clear"> </div>
+
+</div>
+
+</div>
+</body>
 </html>
+
+    
+  
