--- a/artifact.html
+++ b/artifact.html
@@ -30,21 +30,44 @@
 <li><a href="contact.html">Contact Me</a></li>
 </ul>
 </div>
-
-<h4>Artifact 1: Resume</h4>
+<ul>
+<li><h4>Artifact 1: Resume</h4></li>
 <a href="https://simba000.github.io/Resmue/" target="_blank">
 <img src="https://d338t8kmirgyke.cloudfront.net/icons/icon_pngs/000/002/277/original/resume.png" alt="resume link" width="100" height="100">
 </a>
-  
-<h4>Artifact 2: Chessboard</h4>
+ 
+<li><h4>Artifact 2: Chessboard</h4></li>
 <a href="https://emba17.github.io/chessbored/" target="_blank">
 <img src="https://www.pinclipart.com/picdir/big/497-4972566_red-oval-png-king-chess-piece-red-clipart.png" alt="chessboard link" width="100" height="100">
 </a>
+  </ul>
+</div>
+
+<div class="clear"> </div>
+
+<div id="footer">
+
+<div class="left">
+Copyright &copy; Year by <a href="#">Your Website</a>
+<!-- W3C Markup Validator -->
+<p><a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" 
+
+height="31" width="88" /></a>&nbsp;
+
+<!-- W3C CSS Validator -->
+<a href="http://jigsaw.w3.org/css-validator/check/referer">
+    <img style="border:0;width:88px;height:31px"
+        src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+        alt="Valid CSS!" />
+</a>
+</p>
+
+</div>
+
 <div class="right"> 
 <!-- Please consider leaving the credit - link back to our website in the footer intact or if you want to remove it please buy link back free license on http://www.simpletemplates.org/simple-website-template-1.html
 -->
-Design by <a href="">Template</a><br/>
-<p id="time"></p>
+Design by <a href="http://www.simpletemplates.org">Simple Website Templates</a>
 </div>
 
 
@@ -55,6 +78,4 @@ Design by <a href="">Template</a><br/>
 </div>
 </body>
 </html>
-
-    
-  
+ 
