--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,8 @@
 <div id="wrap">
 
 <div id="header">
-<h1>PROG 109 </h1>
-<h2>portfolio spring</h2>
+<h1>portfolio</h1>
+<h2>My website</h2>
 </div>
 
 <div id="topmenu">
@@ -58,7 +58,7 @@
 <div id="footer">
 
 <div class="left">
-Copyright &copy; 2015 by <a href="#">Emba</a>
+Copyright &copy; 2021 by <a href="#">Emba</a>
 <!-- W3C Markup Validator -->
 <p><a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" 
 
