--- a/creative.html
+++ b/creative.html
@@ -1,20 +1,18 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<!DOCTYPE html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta name="description" content="Simple Template #1 from simpletemplates.org" />
 <meta name="keywords" content="simple #1, template, simpletemplates.org" />
 <link rel="stylesheet" media="screen" href="http://openfontlibrary.org/face/free-grotesque-web-font" type="text/css"/>
 <link rel="stylesheet" type="text/css" href="style.css" />
-<script src="portfolio.js" type="text/javascript" defer="defer"></script>
-<title>Artifact</title>
+<title>Creative</title>
 </head>
 <body>
 <div id="wrap">
 
 <div id="header">
-<h1>Portfolio </h1>
-<h2>Emba portfolio </h2>
+<h1>portfolio</h1>
+<h2> My website  </h2>
 </div>
 
 <div id="topmenu">
@@ -34,54 +32,16 @@
 
 <div id="content">
 <div id="content1">
+<h2>Creative</h2>
+<p>Outside activities such as soccer, which I play with a team and also a high school team, are some of my favorite things to do in my spare time. I also enjoy watching movies and listening to music.</p></p>
+<img src="https://upload.wikimedia.org/wikipedia/commons/c/c1/Lionel_Messi_20180626.jpg" width="560" alt="cloud">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/0KdJDPWskVk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<!DOCTYPE html>
-<html>
-<head>
-  <style>
-    body {
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-}
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  margin: 8px;
-}
-.about-section {
-  padding: 100px;
-  text-align: Left;
-  background-color: white;
-  color: black;
-}
-img {
-  max-width: 80%;
-  height: auto;
-}
-    video {
-  width: 10%;
-  height: auto;
-}
+  <a href="https://www.instagram.com/cristiano/?hl=en">The most followed person is a soccer player. </a>
 
-</style>
-  <div class="about-section">
-  <h1>My interests</h1>
-  <p>Welcome
-Outside activities such as soccer, which I play with a team and also a high school team, are some of my favorite things to do in my spare time. I also enjoy watching movies and listening to music.</p>
-    <ul>
-     
-  <li>    <img src="https://imageio.forbes.com/specials-images/imageserve/5ec595d45f39760007b05c07/0x0.jpg?format=jpg&crop=1491,1490,x989,y74,safe&fit=crop"/></li>
+</div>
 
-<li><a href="https://www.youtube.com/watch?v=0KdJDPWskVk" target="_blank">Amazing Messi free-kick goal 600</a></li>
-<li><iframe width="560" height="315" src="https://www.youtube.com/embed/0KdJDPWskVk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-
-
-
-</head>
-<body>
-
-</body>
-</html>
-
+</div>
 
 
 <div class="clear"> </div>
@@ -89,7 +49,7 @@ Outside activities such as soccer, which I play with a team and also a high scho
 <div id="footer">
 
 <div class="left">
-Copyright &copy; 2015 by <a href="#">Weizong</a>
+Copyright &copy; 2021 by <a href="#">Emba</a>
 <!-- W3C Markup Validator -->
 <p><a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" 
 
@@ -108,7 +68,7 @@ height="31" width="88" /></a>&nbsp;
 <div class="right"> 
 <!-- Please consider leaving the credit - link back to our website in the footer intact or if you want to remove it please buy link back free license on http://www.simpletemplates.org/simple-website-template-1.html
 -->
-Design by <a href="http://weyjones.github.io">Template</a>
+Design by <a href="">Template</a>
 <p id="time"></p>
 </div>
 
