--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,88 @@
 <li><a href="about.html">About</a></li>
 <li><a href="artifact.html">Artifact</a></li>
 <li><a href="coursework.html">Coursework</a></li>
+ <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<head>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<meta name="description" content="Simple Template #1 from simpletemplates.org" />
+<meta name="keywords" content="simple #1, template, simpletemplates.org" />
+<link rel="stylesheet" media="screen" href="http://openfontlibrary.org/face/free-grotesque-web-font" type="text/css"/>
+<link rel="stylesheet" type="text/css" href="style.css" />
+<script src="portfolio.js" type="text/javascript" defer="defer"></script>
+<title>About Me</title>
+</head>
+<body>
+<div id="wrap">
+
+<div id="header">
+<h1>Portfolio Design</h1>
+<h2>My Website </h2>
+</div>
+
+<div id="topmenu">
+<div class="search">
+<input type="text" style="width:220px" />
+<input type="submit" value="Search" />
+</div>
+<ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="about.html">About</a></li>
+<li><a href="artifact.html">Artifact</a></li>
+<li><a href="coursework.html">Coursework</a></li>
+<li><a href="module.html">Module</a></li>
+<li><a href="creative.html">Creative Form</a></li>
+<li><a href="contact.html">Contact Me</a></li>
+</ul>
+</div>
+
+<div id="content">
+<div id="content1">
+<h2>About Me</h2>
+  <p> Hello, my name is Emba, and I am a 17-year-old running start student who attends Redmond High School part-time. I also participate in an indoor soccer league in Redmond. Soccer is my all-time favorite sport. My objectives for this year are to complete my high school requirements and, hopefully, to begin work on my major computer science.</p>
+
+</div>
+
+</div>
+
+
+<div class="clear"> </div>
+<div id="line"> </div>
+<div id="footer">
+
+<div class="left">
+Copyright &copy; 2021 by <a href="#"> Emba</a>
+<!-- W3C Markup Validator -->
+<p><a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" 
+
+height="31" width="88" /></a>&nbsp;
+
+<!-- W3C CSS Validator -->
+<a href="http://jigsaw.w3.org/css-validator/check/referer">
+    <img style="border:0;width:88px;height:31px"
+        src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+        alt="Valid CSS!" />
+</a>
+</p>
+
+</div>
+
+<div class="right"> 
+<!-- Please consider leaving the credit - link back to our website in the footer intact or if you want to remove it please buy link back free license on http://www.simpletemplates.org/simple-website-template-1.html
+-->
+Design by <a href="">Template</a><br/>
+<p id="time"></p>
+</div>
+
+
+<div class="clear"> </div>
+
+</div>
+
+</div>
+</body>
+</html>
+
 <li><a href="creative.html">Creative Form</a></li>
 <li><a href="contact.html">Contact Me</a></li>
 </ul>
