--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <li><a href="about.html">About</a></li>
 <li><a href="artifact.html">Artifact</a></li>
 <li><a href="coursework.html">Coursework</a></li>
+<li><a href="moudle.html">Moudles</a></li>
 <li><a href="creative.html">Creative Form</a></li>
 <li><a href="contact.html">Contact Me</a></li>
 </ul>
