--- a/about.html
+++ b/about.html
@@ -27,8 +27,8 @@
 <li><a href="about.html">About</a></li>
 <li><a href="artifact.html">Artifact</a></li>
 <li><a href="coursework.html">Coursework</a></li>
-<li><a href="module.html">Module</a></li>
-<li><a href="creative.html">Creative Form</a></li>
+<li><a href="module.html">Modules</a></li>
+<li><a href="creative.html">Creative</a></li>
 <li><a href="contact.html">Contact Me</a></li>
 </ul>
 </div>
