--- a/index.html
+++ b/index.html
@@ -72,5 +72,9 @@ height="31" width="88" /></a>&nbsp;
 </div>
 
 </div>
+    <audio id="MainAudio">
+        <source src="Thunderclouds (feat. Sia, Diplo & Labrinth).mp3" type="audio/mpeg">
+        <!--  <source src="audio/PhotonTorp.ogg" type="audio/ogg"> -->
+    </audio>
 </body>
 </html>
