--- a/creative.html
+++ b/creative.html
@@ -70,7 +70,15 @@ height="31" width="88" /></a>&nbsp;
 </p>
 
 </div>
-
+<audio id="MainMusic">
+        <source src="Thunderclouds (feat. Sia, Diplo & Labrinth).mp3" type="audio/mpeg">
+        <!--  <source src="audio/PhotonTorp.ogg" type="audio/ogg"> -->
+    </audio>
+    <!--
+    <audio id="ExplosionSound">
+        <source src="audio/Explosion.mp3" type="audio/mpeg">
+        <source src="audio/Explosion.ogg" type="audio/ogg">
+    </audio>
 <div class="right"> 
 <!-- Please consider leaving the credit - link back to our website in the footer intact or if you want to remove it please buy link back free license on http://www.simpletemplates.org/simple-website-template-1.html
 -->
