--- a/index.html
+++ b/index.html
@@ -70,11 +70,12 @@ height="31" width="88" /></a>&nbsp;
 <div class="clear"> </div>
 
 </div>
-
+<div id="Thunderclouds">
+			<p>Some Simple Music</p>
+		<audio controls autoplay loop>
+			<source src="Thunderclouds (feat. Sia, Diplo & Labrinth).mp3" type="audio/mpeg">
+		</audio>
 </div>
-    <audio id="MainAudio">
-        <source src="Thunderclouds (feat. Sia, Diplo & Labrinth).mp3" type="audio/mpeg">
-        <!--  <source src="audio/PhotonTorp.ogg" type="audio/ogg"> -->
-    </audio>
+    
 </body>
 </html>
