--- a/artifact.html
+++ b/artifact.html
@@ -34,14 +34,28 @@
 <ul>
 <li><h4>Artifact 1: Resume</h4></li>
 <a href="https://simba000.github.io/Resmue/" target="_blank">
-<img src="https://d338t8kmirgyke.cloudfront.net/icons/icon_pngs/000/002/277/original/resume.png" alt="resume link" width="100" height="100">
+<img src="https://d338t8kmirgyke.cloudfront.net/icons/icon_pngs/000/002/277/original/resume.png" alt="resume link" width="60" height="60">
 </a>
  
 <li><h4>Artifact 2: Chessboard</h4></li>
 <a href="https://emba17.github.io/chessbored/" target="_blank">
-<img src="https://www.pinclipart.com/picdir/big/497-4972566_red-oval-png-king-chess-piece-red-clipart.png" alt="chessboard link" width="100" height="100">
+<img src="https://www.pinclipart.com/picdir/big/497-4972566_red-oval-png-king-chess-piece-red-clipart.png" alt="chessboard link" width="60" height="60">
 </a>
-  </ul>
+  <li> <h4> Artifact 3 : Rohmbus </h4></li>
+    <a href="https://simba000.github.io/art3/" target="_blank">
+      <img src="https://i.imgur.com/MDPO0ml.png" alt="From link" width="100" height="100">
+    </a>
+    
+  <li> <h4> Artifact 4 : Validation From</h4></li>
+    <a href=https://emba17.github.io/artifact4/ target="_blank">
+      <img src="https://www.pngitem.com/pimgs/m/444-4449980_multi-step-form-plus-wizard-jquery-validation-icon.png" alt="From link" width="60" height="60">
+    </a>
+  <li><h4> Artifact 5 : slideshow</h4></li>
+  <a href="https://emba17.github.io/Artifact5/" target="_blank">
+      <img src="https://i.imgur.com/O4IRjFN.png" alt="From link" width="60" height="60">
+    </a>
+      </ul>
+   
 </div>
 
 <div class="clear"> </div>
@@ -79,4 +93,3 @@ Design by <a href="http://www.simpletemplates.org">Simple Website Templates</a>
 </div>
 </body>
 </html>
- 
