--- a/module.html
+++ b/module.html
@@ -41,6 +41,12 @@
         <li><a target="_blank"href="https://simba000.github.io/Webpage/"> Webpage</a></li>
         <li><a target="_blank"href="https://simba000.github.io/module03/">The cottage gardon </a></li>
         <li><a target="_blank"href="https://emba17.github.io/Tables/">table </a></li>
+        <li><a target="_blank" href="https://emba17.github.io/layouts/">layout</a></li> 
+        <li><a target="_blank" href="https://emba17.github.io/M5/">Multiplication Table</a></li> 
+        <li><a target="_blank" href="https://emba17.github.io/M7/">hotel</a></li> 
+        <li><a target="_blank" href="https://emba17.github.io/m08/">groceries</a></li> 
+        <li><a target="_blank" href="https://emba17.github.io/M9/">Clear</a></li> 
+
   </ul>
 </div>
 
@@ -81,4 +87,4 @@ Design by <a href="">Template</a>
 
 </div>
 </body>
-</html>
+  </html>
